[workspace.package]
edition = "2024"

[workspace]
resolver = "3"
members = ["code/beginner/*", "code/intermediate/*"]


[profile.wasm-release]
inherits = "release"
debug = 0
strip = true
lto = "fat"
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-30% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unecessarily large wasm for no performance gain
# debug = true # include debug symbols, useful when profiling wasm
panic = "abort"
codegen-units = 1


[workspace.dependencies]
anyhow = "1.0"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = "28"
bytemuck = "1.25"
image = "0.25"
cgmath = "0.18"
tobj = {version ="4.0", default-features = false}
instant = "0.1"
pollster = "0.4"

# wasm32 dependencies
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
reqwest = "0.13"
