[package]
name = "tutorial1-window"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "*"
winit = { version = "*", features = ["android-native-activity"] }
env_logger = "*"
log = "*"
wgpu = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# 需要避免在 wasm 中添加 pollster 依赖，否则会导致 wasm 加载时报错：
# An error occurred loading "XXX": TypeError: Failed to resolve module specifier "env". Relative references must start with either "/", "./", or "../".
pollster = "*"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"
console_log = "*"
wgpu = { version = "*", features = ["webgl"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = ["Document", "Window", "Element"] }
