[package]
name = "tutorial3-pipeline"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "*"
winit = { version = "*", features = ["android-native-activity"] }
env_logger = "*"
log = "*"
wgpu = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# pollster causes wasm loading errors - only include for native targets
pollster = "*"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"
console_log = "*"
wgpu = { version = "*", features = ["webgl"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = ["Document", "Window", "Element"] }


