[package]
name = "tutorial3-pipeline"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow.workspace = true
winit = { workspace = true, features = ["android-native-activity"] }
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# pollster causes wasm loading errors - only include for native targets
pollster.workspace = true


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }


