[package]
name = "tutorial5-texture"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow.workspace = true
winit = { workspace = true, features = ["android-native-activity"] }
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
image = { workspace = true, features = ["png", "jpeg"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# 需要避免在 wasm 中添加 pollster 依赖，否则会导致 wasm 加载时报错：
# An error occurred loading "XXX": TypeError: Failed to resolve module specifier "env". Relative references must start with either "/", "./", or "../".
pollster.workspace = true


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }


[[bin]]
name = "tutorial5-texture"
path = "src/main.rs"
